Solve images being too large on firefox

--- a/_assets/css/projects.scss
+++ b/_assets/css/projects.scss
@@ -22,7 +22,7 @@ body.jscript {
 			display: none;
 		}
 
-		img {
+		img, figure {
 			max-width:100%;
 		}
 	}
